--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,6 +14,8 @@
 }
 
 #App .container {
+  padding-top: 400px;
+  position: relative;
   width: 40%;
   min-width: 60rem;
   max-width: 75rem;
@@ -88,7 +90,10 @@ hr {
   padding-top: 7.5rem;
   font-size: 2.6rem;
 }
-
+#App .container .OurComp .Post {
+  padding-top: 200px;
+  position: relative;
+}
 #App .container .demo .contract-container {
   display: flex;
 }
